# Vendor_performance_analysis

./: .gitignore  Exploratory Data Analysis.ipynb.ipynb  README.md  Untitled.ipynb  Vendor Performance Analysis.ipynb  Vendor_summary.csv  get_vendor_summary.py  improved_ingestion.py  ingestion_db.py  pyproject.toml
