[project]
name = "vendor-performance-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "anmolguptanpj",email = "anmolguptanpj282@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gdown (>=6.0.0,<7.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)"
]

[tool.poetry]
packages = [{include = "vendor_performance_analysis", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
